# aoc23

01/: part1.py  part2.py  test3.txt
02/: part1.py  part2.py
04/: Cargo.toml
05/: Cargo.toml
06/: README.md
07/: Cargo.toml
08/: Cargo.toml
